--- a/README
+++ b/README
@@ -1,12 +1,16 @@
- *  Requirements: jquery.flot.navigate ( set zoom : {interactive: false})
+ *  Requirements: jquery.flot.navigate
 
 This plugin enables panning and zooming of individual data series.
+
 Hovering over a Y axis label will allow you to pan the respective series by dragging along the axis, and zoom on the Y axis using the mouse wheel.
 Hovering over the plot itself will allow panning of all series, and zooming on the X axis.
 This is behavior is not yet configurable.
 
+Tips:
+   * Set the labelWidth properties of the axes
+   * Set zoom : {interactive: false} for the navigation plugin
 Issues:
-   * Sometimes the plugin takes a long time to kick in
+   * The plugin hooks on drawOverlay, which in some cases needs to triggered manually with triggerRedrawOverlay();
 TODO:
    * Add more options to control the behavior
    * Add control to the x-axis
