--- a/README
+++ b/README
@@ -2,16 +2,16 @@
 
 This plugin enables panning and zooming of individual data series.
 
+To use it, call plot.drawAxisDivs().  This is necessary because there was not an approprate hook to bind to.
+
 Hovering over a Y axis label will allow you to pan the respective series by dragging along the axis, and zoom on the Y axis using the mouse wheel.
-Hovering over the plot itself will allow panning of all series, and zooming on the X axis.
+Hovering over the X axis label will allow you to pan all series along the X axis by dragging and zoom along the X axis by using the mouse wheel.
+Hovering over the plot itself will allow panning and zooming of all series on the X and Y axes.
 This is behavior is not yet configurable.
 
 Tips:
    * Set the labelWidth properties of the axes
    * Set zoom : {interactive: false} for the navigation plugin
-Issues:
-   * The plugin hooks on drawOverlay, which in some cases needs to triggered manually with triggerRedrawOverlay();
 TODO:
-   * Add more options to control the behavior
-   * Add control to the x-axis
+   * Add options to control the behavior
 
